--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,32 @@
 /* App styling */
 @import './base.css';
+
+:root {
+    --bg-dark: rgb(25, 25, 25);
+    --bg-med: rgb(50, 50, 50);
+    --bg-light: rgb(125, 125, 150);
+    --bg-highlight: rgb(150, 150, 200);
+    --text-light: rgb(225, 225, 225);
+    --text-dark: rgb(0, 0, 0);
+}
+
+body {
+  background-color: var(--bg-dark);
+  color: var(--text-light);
+}
+
+textarea, input {
+    background-color: var(--bg-med);
+    color: var(--text-light)
+}
+
+button {
+    background-color: var(--bg-light);
+    color: var(--text-dark);
+    font-size: 1em;
+    border: 2px, solid;
+}
+
+button:hover {
+    background-color: var(--bg-highlight);
+}
